<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_large">

    <!-- Post Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/detail_post_personality_image"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:paddingTop="@dimen/margin_small"
            android:paddingLeft="16dp"
            android:src="@drawable/personality_thumbnail_malloc"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_post_personality_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_personality_name"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/primary_text"
            android:paddingTop="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_large"
            app:typeface="roboto_condensed_regular"/>

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_post_personality_timestamp_sep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_middle_dot"
            android:textSize="14sp"
            android:paddingTop="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_large"
            android:textColor="@color/primary_text"
            app:typeface="roboto_condensed_regular" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_post_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_temp_timestamp"
            android:textSize="@dimen/font_size_tiny"
            android:paddingTop="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_large"
            android:paddingRight="@dimen/margin_large"
            app:typeface="roboto_condensed_regular"
            android:textColor="@color/secondary_text"/>
    </LinearLayout>

    <include layout="@layout/divider"/>

    <!-- Post content -->
    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/detail_post_content"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/margin_larger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:textSize="@dimen/font_size_regular"
        android:textColor="@color/primary_text"
        app:typeface="roboto_regular"/>

    <!-- ADN Widget -->
    <LinearLayout
        android:id="@+id/detail_post_adn"
        android:paddingTop="@dimen/font_size_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <!-- AGREES -->
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_post_adn_num_agrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_num"
            android:textSize="@dimen/font_size_regular"
            android:textColor="@color/green"
            android:paddingLeft="@dimen/activity_vertical_margin"
            app:typeface="roboto_regular"/>

        <ImageView
            android:id="@+id/detail_post_adn_agrees"
            android:paddingLeft="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/agree"/>

        <!-- DISAGREES -->
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_post_adn_num_disagrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_num"
            android:textSize="@dimen/font_size_regular"
            android:textColor="@color/red"
            android:paddingLeft="@dimen/margin_large"
            app:typeface="roboto_regular"/>

        <ImageView
            android:id="@+id/detail_post_adn_disagrees"
            android:paddingLeft="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/disagree"/>

        <!-- NEWSWORTHIES -->
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/detail_post_adn_num_newsworthies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_num"
            android:textSize="@dimen/font_size_regular"
            android:textColor="@color/grey"
            android:paddingLeft="@dimen/margin_large"
            app:typeface="roboto_regular"/>

        <ImageView
            android:id="@+id/detail_post_adn_newsworthies"
            android:paddingLeft="@dimen/margin_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/newsworthy"/>
    </LinearLayout>

    <!-- Post Action Footer -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_large"
        android:layout_gravity="center_vertical">


        <!-- VOTE AGREE -->
        <ImageButton
            android:id="@+id/detail_post_action_vote_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="8dp"
            android:src="@drawable/ic_post_agree_enabled"
            style="@style/Base.Widget.AppCompat.ButtonBar" />

        <!-- VOTE DISAGREE -->
        <ImageButton
            android:id="@+id/detail_post_action_vote_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/detail_post_action_vote_agree"
            android:layout_toEndOf="@+id/detail_post_action_vote_agree"
            android:padding="8dp"
            android:src="@drawable/ic_post_disagree_enabled"
            style="@style/Base.Widget.AppCompat.ButtonBar" />

        <!-- VOTE NEWSWORTHY -->
        <com.boredat.boredat.ui.NewsworthyButton
            android:id="@+id/detail_post_action_newsworthy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/detail_post_action_vote_disagree"
            android:layout_toEndOf="@+id/detail_post_action_vote_disagree"
            android:padding="8dp"
            android:src="@drawable/newsworthy_button"
            style="@style/Base.Widget.AppCompat.ButtonBar"/>


        <!--MORE-->
        <ImageButton
            android:id="@+id/detail_post_action_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_post_more_horiz"
            style="@style/Base.Widget.AppCompat.ButtonBar"/>

    </RelativeLayout>
</LinearLayout>